--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   <body>
 
     <div class="container">
-        <nav class="navbar navbar-light bg-light mb-3">
+        <nav class="navbar navbar-light bg-light mb-4">
             <a class="navbar-brand" href="#">
             <img src="./img/logo.svg" width="83" height="30" class="d-inline-block align-top" alt="">
             </a>
         </nav>
-        <div class="form-group d-flex mb-3">
+        <div class="form-group d-flex m-0">
             <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon2">
             <button class="btn btn-primary ml-4" type="submit">Submit</button>
         </div>
         
-        <div class="row mb-3">
-            <div class="col">
+        <div class="row">
+            <div class="col-md-4 mt-4">
                 <div class="card">
                     <img src="./img/Card-Picture.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -65,7 +65,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-md-4 mt-4">
                 <div class="card">
                     <img src="./img/Card-Picture.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -109,7 +109,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-md-4 mt-4">
                 <div class="card">
                     <img src="./img/Card-Picture.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -154,8 +154,8 @@
                 </div>
             </div>
         </div>
-        <div class="row mb-3">
-            <div class="col">
+        <div class="row mb-4">
+            <div class="col-md-4 mt-4">
                 <div class="card">
                     <img src="./img/Card-Picture.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -199,7 +199,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-md-4 mt-4">
                 <div class="card">
                     <img src="./img/Card-Picture.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -243,7 +243,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-md-4 mt-4">
                 <div class="card">
                     <img src="./img/Card-Picture.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
